Fix padding when lines get wrapped

--- a/includes/assets/css/scss/gpnl-hero.scss
+++ b/includes/assets/css/scss/gpnl-hero.scss
@@ -47,6 +47,7 @@
           background-color: $white;
           line-height: 2.5;
           color: $black;
+          box-decoration-break: clone;
         }
       }
 
